--- a/form.html
+++ b/form.html
@@ -32,7 +32,7 @@
     <title>Formulaire gestion-budget</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container pb-1 pt-5 pt-md-0">
       <div class="d-flex flex-column align-items-center">
         <img src="images/Frame_2_1.png" alt="logo" class="img-fluid logo" />
         <span id="title">Gestion du budget</span>
@@ -49,24 +49,54 @@
       </div>
       <form>
         <div class="mb-3">
-          <label for="titre" class="form-label">TITRE</label>
-          <input
-            type="text"
-            class="form-control p-3"
-            id="titre"
-            placeholder="Ex: Salaire"
-          />
+          <div class="d-flex">
+            <label for="titre" class="form-label me-2">TITRE</label>
+            <select name="revenue-titre" id="revenue-titre">
+              <option value=""></option>
+              <option value="Salaire">Salaire</option>
+              <option value="Bonus">Bonus</option>
+              <option value="RevenusLocatifs">Revenus Locatifs</option>
+              <option value="Dividendes">Dividendes</option>
+              <option value="Intérêts">Intérêts Bancaires</option>
+              <option value="RevenusFreelance">Revenus Freelance</option>
+              <option value="Pension">Pension</option>
+              <option value="Allocation">Allocations</option>
+              <option value="RevenusInvestissements">
+                Revenus d'Investissements
+              </option>
+              <option value="Remboursement">Remboursements</option>
+              <option value="Autre">Autre</option>
+            </select>
+            <select name="depense-titre" id="depense-titre">
+              <option value=""></option>
+              <option value="Loyer">Loyer</option>
+              <option value="Factures">
+                Factures (électricité, eau, internet, etc.)
+              </option>
+              <option value="Courses">Courses alimentaires</option>
+              <option value="Transport">Transport</option>
+              <option value="Santé">Santé (médicaments, consultations)</option>
+              <option value="Éducation">
+                Éducation (frais de scolarité, livres)
+              </option>
+              <option value="Loisirs">Loisirs (cinéma, sorties)</option>
+              <option value="Shopping">
+                Shopping (vêtements, accessoires)
+              </option>
+              <option value="Épargne">Épargne</option>
+              <option value="Dettes">Remboursement de dettes</option>
+              <option value="Donations">Donations ou charité</option>
+              <option value="Autre">Autre</option>
+            </select>
+          </div>
+
+          <input type="text" class="form-control p-3" id="titre-input" />
         </div>
         <div class="mb-5">
           <label for="montant" class="form-label">MONTANT</label>
-          <input
-            type="number"
-            class="form-control p-3"
-            id="montant"
-            placeholder="Ex: 800 000"
-          />
+          <input type="number" class="form-control p-3" id="montant" />
         </div>
-        <button type="submit" class="btn-active d-block w-50 mx-auto">
+        <button type="submit" class="btn-active d-block w-25 mx-auto">
           Submit
         </button>
       </form>
