--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:site_name" content="naby's budget APP" />
     <!-- link-bootstrap -->
     <link
       rel="stylesheet"
@@ -76,7 +77,7 @@
           </thead>
           <tbody id="depense-table-body">
             <!-- Les lignes de données vont être insérées ici par JavaScript -->
-            <tr>
+            <tr id="rowAddDepense">
               <td>
                 <!-- Button trigger modal -->
                 <button
@@ -204,7 +205,7 @@
           <tbody id="revenu-table-body">
             <!-- Les lignes de données vont être insérées ici par JavaScript -->
 
-            <tr>
+            <tr id="rowAddRevenu">
               <td>
                 <!-- Button trigger modal -->
                 <button
