--- a/index.html
+++ b/index.html
@@ -40,28 +40,22 @@
       </div>
       <!-- cartes budgets -->
       <div class="row">
-        <div class="col-12 col-sm-6 col-md-3 p-4">
+        <div class="col-12 col-sm-6 col-md-4 p-4">
           <div class="border shadow">
             <h3 class="budget-name rounded-top-3 p-2 text-center">REVENUE</h3>
             <p id="revenu-price" class="text-center fs-5">100000</p>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-3 p-4">
+        <div class="col-12 col-sm-6 col-md-4 p-4">
           <div class="border shadow">
             <h3 class="budget-name rounded-top-3 p-2 text-center">DÉPENSE</h3>
             <p id="dépense-price" class="text-center fs-5">100000</p>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-3 p-4">
+        <div class="col-12 col-md-4 p-4">
           <div class="border shadow">
             <h3 class="budget-name rounded-top-3 p-2 text-center">SOLDE</h3>
             <p id="solde-price" class="text-center fs-5">100000</p>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-md-3 p-4">
-          <div class="border shadow">
-            <h3 class="budget-name rounded-top-3 p-2 text-center">ÉPARGNE</h3>
-            <p id="epargne-price" class="text-center fs-5">100000</p>
           </div>
         </div>
       </div>
