--- a/index.html
+++ b/index.html
@@ -43,22 +43,25 @@
         <div class="col-12 col-sm-6 col-md-4 p-4">
           <div class="border shadow">
             <h3 class="budget-name rounded-top-3 p-2 text-center">REVENUE</h3>
-            <p id="revenu-price" class="text-center fs-5">100000</p>
+            <p id="revenu-price" class="text-center fs-5"></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 p-4">
           <div class="border shadow">
             <h3 class="budget-name rounded-top-3 p-2 text-center">DÉPENSE</h3>
-            <p id="dépense-price" class="text-center fs-5">100000</p>
+            <p id="dépense-price" class="text-center fs-5"></p>
           </div>
         </div>
         <div class="col-12 col-md-4 p-4">
           <div class="border shadow">
             <h3 class="budget-name rounded-top-3 p-2 text-center">SOLDE</h3>
-            <p id="solde-price" class="text-center fs-5">100000</p>
+            <p id="solde-price" class="text-center fs-5"></p>
           </div>
         </div>
       </div>
+      <button class="btn-active reset" onclick="resetAll()">
+        Reset tables <i class="fa-solid fa-rotate"></i>
+      </button>
       <!-- cartes budgets exit -->
       <div class="budget-table container">
         <!------------------------------------------------- table dépense ------------------------------------------------->
