--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- cartes budgets exit -->
       <div class="budget-table container">
         <!------------------------------------------------- table dépense ------------------------------------------------->
-        <h2 class="mt-5">Liste des dépense</h2>
+        <h2 class="mt-5">Liste des dépenses</h2>
         <table class="affichage_tableau_depense mt-3 mx-auto">
           <thead>
             <th>TITRE</th>
