--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <button class="btn-active reset" onclick="resetAll()">
-        Reset tables <i class="fa-solid fa-rotate"></i>
+        Réinitialiser les tableaux <i class="fa-solid fa-rotate"></i>
       </button>
       <!-- cartes budgets exit -->
       <div class="budget-table container">
