--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <tbody id="depense-table-body">
             <!-- Les lignes de données vont être insérées ici par JavaScript -->
             <tr id="rowAddDepense">
-              <td>
+              <td colspan="3">
                 <!-- Button trigger modal -->
                 <button
                   type="button"
@@ -123,6 +123,7 @@
                                 type="text"
                                 class="form-control p-3"
                                 id="depense-titre-input"
+                                autofocus
                                 required
                               />
                               <select name="depense-titre" id="depense-titre">
@@ -186,8 +187,6 @@
                   </div>
                 </div>
               </td>
-              <td></td>
-              <td></td>
             </tr>
           </tbody>
         </table>
@@ -203,7 +202,7 @@
             <!-- Les lignes de données vont être insérées ici par JavaScript -->
 
             <tr id="rowAddRevenu">
-              <td>
+              <td colspan="3">
                 <!-- Button trigger modal -->
                 <button
                   type="button"
@@ -307,8 +306,6 @@
                   </div>
                 </div>
               </td>
-              <td></td>
-              <td></td>
             </tr>
           </tbody>
         </table>
